--- a/week_3/011_Image_Captioning.ipynb
+++ b/week_3/011_Image_Captioning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -10,11 +10,12 @@
    },
    "outputs": [],
    "source": [
-    "import math\n",
     "import os\n",
-    "import tensorflow as tf\n",
+    "import math\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "#import pandas as pd\n",
     "\n",
     "#import tensorflow.python.platform\n",
     "#from keras.preprocessing import sequence\n",
@@ -35,17 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -56,8 +60,101 @@
     "os.system('mv 224x224_mscoco_images resource/224x224_mscoco_images')\n",
     "\n",
     "# download vgg16 network\n",
-    "os.system('wget cvlab.postech.ac.kr/~jonghwan/vgg16_weights.npz')"
+    "os.system('wget cvlab.postech.ac.kr/~jonghwan/vgg16_weights.npz')\n",
+    "os.system('mv vgg16_weights.npz resource/vgg16_weights.npz')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'conv1_1_W', (3, 3, 3, 64))\n",
+      "(1, 'conv1_1_b', (64,))\n",
+      "(2, 'conv1_2_W', (3, 3, 64, 64))\n",
+      "(3, 'conv1_2_b', (64,))\n",
+      "(4, 'conv2_1_W', (3, 3, 64, 128))\n",
+      "(5, 'conv2_1_b', (128,))\n",
+      "(6, 'conv2_2_W', (3, 3, 128, 128))\n",
+      "(7, 'conv2_2_b', (128,))\n",
+      "(8, 'conv3_1_W', (3, 3, 128, 256))\n",
+      "(9, 'conv3_1_b', (256,))\n",
+      "(10, 'conv3_2_W', (3, 3, 256, 256))\n",
+      "(11, 'conv3_2_b', (256,))\n",
+      "(12, 'conv3_3_W', (3, 3, 256, 256))\n",
+      "(13, 'conv3_3_b', (256,))\n",
+      "(14, 'conv4_1_W', (3, 3, 256, 512))\n",
+      "(15, 'conv4_1_b', (512,))\n",
+      "(16, 'conv4_2_W', (3, 3, 512, 512))\n",
+      "(17, 'conv4_2_b', (512,))\n",
+      "(18, 'conv4_3_W', (3, 3, 512, 512))\n",
+      "(19, 'conv4_3_b', (512,))\n",
+      "(20, 'conv5_1_W', (3, 3, 512, 512))\n",
+      "(21, 'conv5_1_b', (512,))\n",
+      "(22, 'conv5_2_W', (3, 3, 512, 512))\n",
+      "(23, 'conv5_2_b', (512,))\n",
+      "(24, 'conv5_3_W', (3, 3, 512, 512))\n",
+      "(25, 'conv5_3_b', (512,))\n",
+      "(26, 'fc6_W', (25088, 4096))\n",
+      "(27, 'fc6_b', (4096,))\n",
+      "(28, 'fc7_W', (4096, 4096))\n",
+      "(29, 'fc7_b', (4096,))\n"
+     ]
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "image = tf.placeholder(tf.float32, [16, 224, 224, 3])\n",
+    "vgg = vgg16(image, 'resource/vgg16_weights.npz', sess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fc7 = vgg.fc7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "img = np.random.randn(16,224,224,3)\n",
+    "\n",
+    "feat = sess.run(fc7, feed_dict={image:img})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -401,21 +498,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
