--- a/week_3/Data_Loader.ipynb
+++ b/week_3/Data_Loader.ipynb
@@ -61,6 +61,12 @@
     "    def getItow(self):\n",
     "        return self.itow\n",
     "    \n",
+    "    def getVocabSize(self):\n",
+    "        return len(self.itow)\n",
+    "\n",
+    "    def getNumCaptions(self):\n",
+    "        return self.num_captions\n",
+    "    \n",
     "    def getMaxCaptionLength(self):\n",
     "        return self.max_caption_length\n",
     "    \n",
@@ -77,7 +83,6 @@
     "        batch_caption_masks = np.zeros((batch_size, self.max_caption_length), dtype='uint32')\n",
     "        batch_images = np.zeros((batch_size, 224, 224, 3), dtype='float')\n",
     "        batch_image_path = []\n",
-    "        batch_question_ids = []\n",
     "        \n",
     "        for bi in range(batch_size):\n",
     "            if self.iter_idx == self.num_captions:\n",
@@ -96,8 +101,8 @@
     "            #img = np.transpose(img, [2,0,1]) # (224,224,3) -> (3,224,224)\n",
     "            batch_images[bi] = img\n",
     "            \n",
-    "            # load caption id\n",
-    "            batch_question_ids.append(self.caption_ids[self.iter_idx])\n",
+    "            # load image id\n",
+    "            batch_image_ids.append(self.image_ids[self.iter_idx])\n",
     "            \n",
     "            # increment iterator\n",
     "            self.incrementIterIndex()\n",
@@ -107,7 +112,6 @@
     "        batch['caption_length'] = batch_caption_length\n",
     "        batch['caption_masks'] = batch_caption_masks\n",
     "        batch['images'] = batch_images\n",
-    "        batch['question_ids'] = batch_question_ids \n",
     "        \n",
     "        return batch    "
    ]
@@ -221,21 +225,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
