--- a/week_3/Encode_Data.ipynb
+++ b/week_3/Encode_Data.ipynb
@@ -13,13 +13,14 @@
     "import os\n",
     "import json\n",
     "import h5py\n",
+    "import random\n",
     "import nltk.tokenize\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -121,7 +122,29 @@
     "    for ann in anns:\n",
     "        img_id = ann['image_id']\n",
     "        img_path = ann['image_path']\n",
-    "        for cap, info in zip(ann['tokenized_captions'], ann['captions']):\n",
+    "        \n",
+    "        if datatype == 'train':\n",
+    "            for cap, info in zip(ann['tokenized_captions'], ann['captions']):\n",
+    "                # numpy data\n",
+    "                caption_length[idx_cap] = min(len(cap), max_caption_length)\n",
+    "                for i,w in enumerate(cap):\n",
+    "                    if i == (max_caption_length-1):\n",
+    "                        caption_labels[idx_cap, i] = wtoi['<E>']\n",
+    "                        break\n",
+    "                    if w in vocab:\n",
+    "                        caption_labels[idx_cap, i] = wtoi[w]\n",
+    "                    else:\n",
+    "                        caption_labels[idx_cap, i] = wtoi['<UNK>']\n",
+    "\n",
+    "                # json data\n",
+    "                caption_ids.append(info['id'])\n",
+    "                image_file_name.append(img_path)\n",
+    "                image_ids.append(img_id)\n",
+    "\n",
+    "                idx_cap += 1\n",
+    "        else:\n",
+    "            idx = random.randint(0, len(ann['tokenized_captions'])-1)\n",
+    "            cap, info = ann['tokenized_captions'][idx], ann['captions'][idx]\n",
     "            # numpy data\n",
     "            caption_length[idx_cap] = min(len(cap), max_caption_length)\n",
     "            for i,w in enumerate(cap):\n",
@@ -132,11 +155,11 @@
     "                    caption_labels[idx_cap, i] = wtoi[w]\n",
     "                else:\n",
     "                    caption_labels[idx_cap, i] = wtoi['<UNK>']\n",
-    "            \n",
+    "\n",
     "            # json data\n",
     "            caption_ids.append(info['id'])\n",
     "            image_file_name.append(img_path)\n",
-    "            image_ids.append(img_id)\n",
+    "            image_ids.append(img_id)           \n",
     "            \n",
     "            idx_cap += 1\n",
     "    \n",
@@ -161,7 +184,8 @@
     "    save_json_file['image_path'] = image_file_name\n",
     "    save_json_file['max_caption_length'] = max_caption_length\n",
     "    write_json(save_json_path, save_json_file)\n",
-    "    print('Save %s json file to %s' % (datatype, save_json_path))"
+    "    print('Save %s json file to %s' % (datatype, save_json_path))\n",
+    "    print('The number of saved captions: %d\\n' % len(save_json_file['image_ids']))"
    ]
   },
   {
@@ -203,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -214,10 +238,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total words: 7353\n",
-      "Words in vocabulary: 3244\n",
-      "Top 20 words:\n",
-      " ['<UNK>', 'a', '<E>', '<S>', '.', 'on', 'of', 'the', 'in', 'with', 'and', 'is', 'man', 'to', 'sitting', 'an', 'two', ',', 'at', 'standing']\n"
+      "('Total words:', 7353)\n",
+      "('Words in vocabulary:', 3244)\n",
+      "('Top 20 words:\\n', ['<UNK>', u'a', '<S>', '<E>', u'.', u'on', u'of', u'the', u'in', u'with', u'and', u'is', u'man', u'to', u'sitting', u'an', u'two', u',', u'at', u'standing'])\n"
      ]
     }
    ],
@@ -228,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -239,12 +262,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of captions: 25010\n",
+      "('Number of captions:', 25010)\n",
       "Save train h5py file to resource/train.h5\n",
       "Save train json file to resource/train.json\n",
-      "Number of captions: 5001\n",
+      "The number of saved captions: 25010\n",
+      "\n",
+      "('Number of captions:', 5001)\n",
       "Save test h5py file to resource/test.h5\n",
-      "Save test json file to resource/test.json\n"
+      "Save test json file to resource/test.json\n",
+      "The number of saved captions: 1000\n",
+      "\n"
      ]
     }
    ],
@@ -257,21 +284,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
