--- a/week_3/011_Image_Captioning.ipynb
+++ b/week_3/011_Image_Captioning.ipynb
@@ -236,14 +236,14 @@
     "    'dim_image': 4096, # dimension of vgg16 network output\n",
     "    'dim_embed': 256,\n",
     "    'dim_hidden': 256,\n",
-    "    'batch_size': 10,\n",
+    "    'batch_size': 50,\n",
     "    'n_lstm_steps': loaders['train'].getMaxCaptionLength(),\n",
     "    'n_words': loaders['train'].getVocabSize(),\n",
     "}\n",
     "\n",
     "\n",
     "def train():\n",
-    "    n_epochs = 10\n",
+    "    n_epochs = 100\n",
     "    learning_rate = 0.001\n",
     "    model_path = './models'\n",
     "    \n",
@@ -258,7 +258,7 @@
     "\n",
     "    iteration_per_epoch = loaders['train'].getNumCaptions() / model_params['batch_size']\n",
     "    for epoch in range(n_epochs):\n",
-    "        for bi in range(10):\n",
+    "        for bi in range(iteration_per_epoch):\n",
     "            # load batch data\n",
     "            batch = loaders['train'].getBatch(model_params['batch_size'])\n",
     "\n",
@@ -266,19 +266,15 @@
     "                                                                  sentence : batch['caption_labels'],\n",
     "                                                                  mask : batch['caption_masks']})\n",
     "\n",
-    "            if bi % 100 == 0:\n",
-    "                print \"%d epoch %d iteration Cost: %.4f\" % (epoch, bi, loss_value)\n",
+    "            if bi % 10 == 0:\n",
+    "                print \"%d epoch %d iteration Cost: %.4f\" % (epoch+1, bi, loss_value)\n",
     "\n",
-    "        print \"Epoch \", epoch, \" is done. Saving the model ... \"\n",
+    "        print \"Epoch \", epoch+1, \" is done. Saving the model ... \"\n",
     "        if not os.path.isdir(model_path):\n",
     "            os.makedirs(model_path)\n",
     "        saver.save(sess, os.path.join(model_path, 'model'), global_step=epoch)\n",
     "        learning_rate *= 0.95\n",
     "\n",
-    "def labelToCaption(caption_label, itow):\n",
-    "    TODO = True\n",
-    "    \n",
-    "        \n",
     "def test(model_path='./models/model-0', maxlen=15):\n",
     "    sess = tf.InteractiveSession()\n",
     "    \n",
@@ -340,7 +336,7 @@
    "outputs": [],
    "source": [
     "# test model that means to predict captions for test images\n",
-    "train()"
+    "# train()"
    ]
   },
   {
@@ -354,115 +350,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from models/model-4\n",
-      "cars driving down a street next to a building .\n",
-      "of\n",
-      "of\n",
-      "of\n",
-      "living\n",
-      "<S>\n",
-      "at a train camera .\n",
-      "with a <UNK> of <UNK> .\n",
-      "to a <UNK> of <UNK> <S> .\n",
-      "at\n",
-      "mirror\n",
-      "of\n",
-      "in the middle of a field .\n",
-      "pens a man standing in front of a white cake .\n",
-      "view of a street sign and a <UNK> <S> .\n",
-      "of\n",
-      "of\n",
-      "sign\n",
-      "at\n",
-      "of people walking down a street .\n",
-      "<S> in the middle of a field .\n",
-      "in\n",
-      "of\n",
-      "a man and a woman in a hot .\n",
-      "of\n",
-      "of\n",
-      "jumps\n",
-      "of\n",
-      "mirror with a <UNK> on it <S> <S> .\n",
-      "jumps\n",
-      "jumps of a man riding a wave on a air .\n",
-      "sign\n",
-      "a\n",
-      "of\n",
-      "sign south chew <UNK> on a street sign .\n",
-      ".\n",
-      "jumps\n",
-      "of\n",
-      "jumps\n",
-      "to\n",
-      "close\n",
-      "of\n",
-      "jumps of a man riding a wave on a air .\n",
-      "jumps\n",
-      "to a <UNK> of <UNK> .\n",
-      "of\n",
-      "of\n",
-      "at\n",
-      "at a train camera .\n",
-      "of\n",
-      "of\n",
-      "of a bathroom with a toilet and line .\n",
-      "of\n",
-      "a\n",
-      "sign bull to a <UNK> .\n",
-      "of\n",
-      "pro a white plate with a talking and a drink .\n",
-      "area\n",
-      "of\n",
-      "sign bull to a <UNK> <UNK> <UNK> .\n",
-      "sign bull to a <UNK> .\n",
-      "of\n",
-      "jumps\n",
-      "from\n",
-      "of\n",
-      "at\n",
-      "pens a man riding a wave on a air .\n",
-      "of\n",
-      "of\n",
-      "of\n",
-      "from\n",
-      "jumps\n",
-      "at\n",
-      "jumps is a man riding a wave on a air .\n",
-      "to\n",
-      "jumps of a man riding a wave on a air .\n",
-      "at a table with a <UNK> <S> .\n",
-      "of\n",
-      "in\n",
-      "at a table with a <UNK> <S> .\n",
-      "and\n",
-      "jumps\n",
-      "of\n",
-      "of\n",
-      "jumps\n",
-      "of\n",
-      "of\n",
-      "of\n",
-      "view of a street sign and a <UNK> .\n",
-      "view of a street sign and a <UNK> .\n",
-      "with\n",
-      "jumps\n",
-      "jumps is a man and a woman playing giraffes .\n",
-      "of\n",
-      "<S>\n",
-      "of\n",
-      "pens a man riding a wave on a air .\n",
-      "of\n",
-      "sign\n",
-      "at\n",
-      "jumps of a man standing in front of a mirror .\n",
+      "INFO:tensorflow:Restoring parameters from models/model-86\n",
+      "('Generated Caption: ', u'a')\n",
+      "('Generated Caption: ', u'a man is playing a video game in a living room .')\n",
       "Save the predictions to result/predictions.json\n"
      ]
     }
    ],
    "source": [
     "# test model that means to predict captions for test images\n",
-    "test(model_path='models/model-4')"
+    "test(model_path='models/model-5')"
    ]
   },
   {
@@ -474,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -520,7 +417,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "0:00:00.686633\n",
+      "0:00:00.639860\n",
       "creating index...\n",
       "index created!\n",
       "Loading and preparing results...     \n",
@@ -538,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -550,115 +447,14 @@
       "tokenization...\n",
       "setting up scorers...\n",
       "computing Bleu score...\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "{'reflen': 875, 'guess': [306, 206, 175, 144], 'testlen': 306, 'correct': [131, 25, 5, 1]}\n",
-      "ratio: 0.349714285714\n",
-      "Bleu_1: 0.067\n",
-      "Bleu_2: 0.036\n",
-      "Bleu_3: 0.018\n",
-      "Bleu_4: 0.009\n",
+      "{'reflen': 987, 'guess': [772, 671, 602, 533], 'testlen': 772, 'correct': [298, 55, 10, 7]}\n",
+      "ratio: 0.782168186423\n",
+      "Bleu_1: 0.292\n",
+      "Bleu_2: 0.135\n",
+      "Bleu_3: 0.061\n",
+      "Bleu_4: 0.039\n",
       "computing CIDEr score...\n",
-      "CIDEr: 0.020\n"
+      "CIDEr: 0.053\n"
      ]
     }
    ],
