--- a/week_3/011_Image_Captioning.ipynb
+++ b/week_3/011_Image_Captioning.ipynb
@@ -329,7 +329,7 @@
    "outputs": [],
    "source": [
     "# test model that means to predict captions for test images\n",
-    "# train()"
+    "train()"
    ]
   },
   {
