--- a/week_3/012_Image_Captioning.ipynb
+++ b/week_3/012_Image_Captioning.ipynb
@@ -415,7 +415,6 @@
     "                input_feed = np.argmax(softmax,1)\n",
     "                state_feed = next_states\n",
     "                \n",
-    "                print(input_feed)\n",
     "                generated_word_index.append(input_feed)            \n",
     "            \n",
     "            generated_sentence = ''\n",
@@ -547,7 +546,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
