--- a/project/demo.ipynb
+++ b/project/demo.ipynb
@@ -198,6 +198,68 @@
     "\n",
     "    return cv2.resize(resized_image, (target_height, target_width))\n",
     "\n",
+    "\n",
+    "def read_image(path):\n",
+    "\n",
+    "     img = crop_image(path, target_height=224, target_width=224)\n",
+    "     if img.shape[2] == 4:\n",
+    "         img = img[:,:,:3]\n",
+    "\n",
+    "     img = img[None, ...]\n",
+    "     return img\n",
+    "    \n",
+    "  \n",
+    "    \n",
+    "def test_tf(test_image_path=None, model_path='./models/model-72', maxlen=30):\n",
+    "    with open(vgg_path) as f:\n",
+    "        fileContent = f.read()\n",
+    "        graph_def = tf.GraphDef()\n",
+    "        graph_def.ParseFromString(fileContent)\n",
+    "\n",
+    "    images = tf.placeholder(\"float32\", [1, 224, 224, 3])\n",
+    "    tf.import_graph_def(graph_def, input_map={\"images\":images})\n",
+    "\n",
+    "    ixtoword = np.load('./data/ixtoword.npy').tolist()\n",
+    "    n_words = len(ixtoword)\n",
+    "\n",
+    "    image_val = read_image(test_image_path)\n",
+    "    sess = tf.InteractiveSession()\n",
+    "\n",
+    "    caption_generator = Caption_Generator(\n",
+    "           dim_image=dim_image,\n",
+    "           dim_hidden=dim_hidden,\n",
+    "           dim_embed=dim_embed,\n",
+    "           batch_size=batch_size,\n",
+    "           n_lstm_steps=maxlen,\n",
+    "           n_words=n_words)\n",
+    "\n",
+    "    graph = tf.get_default_graph()\n",
+    "    fc7 = sess.run(graph.get_tensor_by_name(\"import/fc7_relu:0\"), feed_dict={images:image_val})\n",
+    "\n",
+    "    fc7_tf, generated_words = caption_generator.build_generator(maxlen=maxlen)\n",
+    "\n",
+    "    saver = tf.train.Saver()\n",
+    "    saver.restore(sess, model_path)\n",
+    "\n",
+    "    generated_word_index= sess.run(generated_words, feed_dict={fc7_tf:fc7})\n",
+    "    generated_word_index = np.hstack(generated_word_index)\n",
+    "\n",
+    "    generated_words = [ixtoword[x] for x in generated_word_index]\n",
+    "    punctuation = np.argmax(np.array(generated_words) == '.')+1\n",
+    "\n",
+    "    generated_words = generated_words[:punctuation]\n",
+    "    generated_sentence = ' '.join(generated_words)\n",
+    "    print generated_sentence\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "################### 학습 관련 Parameters #####################\n",
     "\n",
     "dim_embed = 256\n",
@@ -294,59 +356,7 @@
     "\n",
     "        print \"Epoch \", epoch, \" is done. Saving the model ... \"\n",
     "        saver.save(sess, os.path.join(model_path, 'model'), global_step=epoch+1)\n",
-    "        learning_rate *= 0.95\n",
-    "\n",
-    "def read_image(path):\n",
-    "\n",
-    "     img = crop_image(path, target_height=224, target_width=224)\n",
-    "     if img.shape[2] == 4:\n",
-    "         img = img[:,:,:3]\n",
-    "\n",
-    "     img = img[None, ...]\n",
-    "     return img\n",
-    "    \n",
-    "  \n",
-    "    \n",
-    "def test_tf(test_image_path=None, model_path='./models/model-72', maxlen=30):\n",
-    "    with open(vgg_path) as f:\n",
-    "        fileContent = f.read()\n",
-    "        graph_def = tf.GraphDef()\n",
-    "        graph_def.ParseFromString(fileContent)\n",
-    "\n",
-    "    images = tf.placeholder(\"float32\", [1, 224, 224, 3])\n",
-    "    tf.import_graph_def(graph_def, input_map={\"images\":images})\n",
-    "\n",
-    "    ixtoword = np.load('./data/ixtoword.npy').tolist()\n",
-    "    n_words = len(ixtoword)\n",
-    "\n",
-    "    image_val = read_image(test_image_path)\n",
-    "    sess = tf.InteractiveSession()\n",
-    "\n",
-    "    caption_generator = Caption_Generator(\n",
-    "           dim_image=dim_image,\n",
-    "           dim_hidden=dim_hidden,\n",
-    "           dim_embed=dim_embed,\n",
-    "           batch_size=batch_size,\n",
-    "           n_lstm_steps=maxlen,\n",
-    "           n_words=n_words)\n",
-    "\n",
-    "    graph = tf.get_default_graph()\n",
-    "    fc7 = sess.run(graph.get_tensor_by_name(\"import/fc7_relu:0\"), feed_dict={images:image_val})\n",
-    "\n",
-    "    fc7_tf, generated_words = caption_generator.build_generator(maxlen=maxlen)\n",
-    "\n",
-    "    saver = tf.train.Saver()\n",
-    "    saver.restore(sess, model_path)\n",
-    "\n",
-    "    generated_word_index= sess.run(generated_words, feed_dict={fc7_tf:fc7})\n",
-    "    generated_word_index = np.hstack(generated_word_index)\n",
-    "\n",
-    "    generated_words = [ixtoword[x] for x in generated_word_index]\n",
-    "    punctuation = np.argmax(np.array(generated_words) == '.')+1\n",
-    "\n",
-    "    generated_words = generated_words[:punctuation]\n",
-    "    generated_sentence = ' '.join(generated_words)\n",
-    "    print generated_sentence\n"
+    "        learning_rate *= 0.95"
    ]
   },
   {
